[gd_scene load_steps=15 format=3 uid="uid://1x5v2og6yriv"]

[ext_resource type="Texture2D" uid="uid://cajs5kqfcgyys" path="res://Screenshot 2025-12-08 195332.png" id="1_06t4h"]
[ext_resource type="Script" uid="uid://d30kfbh7qsmnk" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://4cim6ptqsfjj" path="res://GrapeSoda.ttf" id="2_7vrkn"]
[ext_resource type="AudioStream" uid="uid://dn3n1aqsuqycu" path="res://assets/brackeys_platformer_assets/music/time_for_adventure.mp3" id="4_jix8l"]
[ext_resource type="Script" uid="uid://buld6tnoupn00" path="res://audio_control.gd" id="5_glbon"]
[ext_resource type="Script" uid="uid://dep3k3314r1q5" path="res://fullscreencontrol.gd" id="6_nlkkf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("1_06t4h")
modulate_color = Color(0.22670761, 0.22670746, 0.22670743, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.37791866, 0.37791893, 0.3779187, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.796243, 0.796243, 0.796243, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(0.9867516, 0.9867516, 0.9867516, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_glbon"]
color = Color(0, 0.44257966, 0.7538573, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nlkkf"]
color = Color(0, 0.42701527, 0.7867278, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_right = -6.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="main buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.62100005
anchor_right = 0.5
anchor_bottom = 0.62100005
offset_left = -192.5
offset_top = -125.27103
offset_right = 198.5
offset_bottom = 125.72897
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="main buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Start Game"

[node name="Button3" type="Button" parent="main buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Exit"

[node name="Button2" type="Button" parent="main buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Options"

[node name="level1" type="Button" parent="main buttons"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "       Level 1"

[node name="level2" type="Button" parent="main buttons"]
layout_mode = 2
text = "      Level 2"

[node name="level3" type="Button" parent="main buttons"]
layout_mode = 2
text = "       Level 3"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.5
offset_top = -235.5
offset_right = 330.5
offset_bottom = -155.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_constants/shadow_offset_x = 30
theme_override_constants/shadow_offset_y = 30
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 80
text = "Godot Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jix8l")
autoplay = true
bus = &"music"

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.633
anchor_right = 0.5
anchor_bottom = 0.633
offset_left = -227.5
offset_top = -235.08301
offset_right = 252.5
offset_bottom = 154.91699

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.053000003
anchor_top = -0.113000005
anchor_right = 0.887
anchor_bottom = -0.113000005
offset_left = 2.560009
offset_top = 26.018997
offset_right = 2.5679932
offset_bottom = 92.019
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Options"]
layout_mode = 0
offset_left = 39.0
offset_top = 324.0
offset_right = 425.0
offset_bottom = 371.05103
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -124.0
offset_right = 152.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music volume"

[node name="AudioControl" type="HSlider" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_glbon")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_nlkkf")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_glbon")
audio_bus_name = "music"

[node name="HBoxContainer3" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2

[node name="fullscreencontrol" type="CheckButton" parent="Options/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Fullscreen"
script = ExtResource("6_nlkkf")

[connection signal="pressed" from="main buttons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main buttons/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="main buttons/Button2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="main buttons/level1" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="main buttons/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="main buttons/level2" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="main buttons/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="main buttons/level3" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="main buttons/level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer/AudioControl" to="Options/VBoxContainer/HBoxContainer/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/HBoxContainer3/fullscreencontrol" to="Options/VBoxContainer/HBoxContainer3/fullscreencontrol" method="_on_toggled"]
